--- a/Weather2App/Weather2App/Base.lproj/Main.storyboard
+++ b/Weather2App/Weather2App/Base.lproj/Main.storyboard
@@ -108,22 +108,40 @@
             </objects>
             <point key="canvasLocation" x="832" y="66"/>
         </scene>
-        <!--Table View Controller-->
+        <!--All Cities Controller-->
         <scene sceneID="cM4-S4-U7M">
             <objects>
-                <tableViewController id="cEb-ee-Zx6" sceneMemberID="viewController">
+                <tableViewController id="cEb-ee-Zx6" customClass="AllCitiesController" customModule="Weather2App" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" id="0f7-KV-TsV">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="IIB-a5-w32">
-                                <rect key="frame" x="0.0" y="44.5" width="414" height="43.5"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="CityCell" rowHeight="40" id="IIB-a5-w32" customClass="AllCitiesCell" customModule="Weather2App" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="44.5" width="414" height="40"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="IIB-a5-w32" id="LN3-m5-oqK">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="40"/>
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="I6g-TR-nnv">
+                                            <rect key="frame" x="20" y="11" width="374" height="18"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="I6g-TR-nnv" firstAttribute="top" secondItem="LN3-m5-oqK" secondAttribute="topMargin" id="8y7-Ss-FqM"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="I6g-TR-nnv" secondAttribute="trailing" id="Ccg-Za-puT"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="I6g-TR-nnv" secondAttribute="bottom" id="F39-8T-XwC"/>
+                                        <constraint firstItem="I6g-TR-nnv" firstAttribute="leading" secondItem="LN3-m5-oqK" secondAttribute="leadingMargin" id="TVx-6t-pM8"/>
+                                    </constraints>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="cityName" destination="I6g-TR-nnv" id="TMc-Ue-px7"/>
+                                    <segue destination="b0S-ZQ-Kzh" kind="unwind" identifier="addCity" unwindAction="addCityWithSegue:" id="Ctb-uR-NgX"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -134,26 +152,42 @@
                     <navigationItem key="navigationItem" id="NER-GH-nE9"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="N0g-l1-o8m" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <exit id="b0S-ZQ-Kzh" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="2386" y="-611"/>
         </scene>
-        <!--Table View Controller-->
+        <!--My Cities Controller-->
         <scene sceneID="7sb-Rh-t5M">
             <objects>
-                <tableViewController id="xyG-FI-Mg9" sceneMemberID="viewController">
+                <tableViewController id="xyG-FI-Mg9" customClass="MyCitiesController" customModule="Weather2App" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" id="O0f-62-g5x">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="Zh5-2g-y2p">
-                                <rect key="frame" x="0.0" y="44.5" width="414" height="43.5"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="MyCitiesCell" rowHeight="40" id="Zh5-2g-y2p" customClass="MyCitiesCell" customModule="Weather2App" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="44.5" width="414" height="40"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Zh5-2g-y2p" id="kBm-xF-Q84">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="40"/>
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Dka-wQ-VqE">
+                                            <rect key="frame" x="20" y="11" width="374" height="18"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstAttribute="leadingMargin" secondItem="Dka-wQ-VqE" secondAttribute="leading" id="2KH-Ht-BW2"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="Dka-wQ-VqE" secondAttribute="bottom" id="7E0-7u-oJA"/>
+                                        <constraint firstItem="Dka-wQ-VqE" firstAttribute="top" secondItem="kBm-xF-Q84" secondAttribute="topMargin" id="Gzi-no-RaZ"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="Dka-wQ-VqE" secondAttribute="trailing" id="fKj-ql-Whs"/>
+                                    </constraints>
                                 </tableViewCellContentView>
                                 <connections>
+                                    <outlet property="cityName" destination="Dka-wQ-VqE" id="mlV-Ut-2ax"/>
                                     <segue destination="hGA-i6-BbJ" kind="show" id="DiN-kb-Awq"/>
                                 </connections>
                             </tableViewCell>
@@ -175,28 +209,64 @@
             </objects>
             <point key="canvasLocation" x="1620" y="66"/>
         </scene>
-        <!--Collection View Controller-->
+        <!--Weather View Controller-->
         <scene sceneID="1Hg-K6-PWf">
             <objects>
-                <collectionViewController id="hGA-i6-BbJ" sceneMemberID="viewController">
+                <collectionViewController id="hGA-i6-BbJ" customClass="WeatherViewController" customModule="Weather2App" customModuleProvider="target" sceneMemberID="viewController">
                     <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="NPL-dW-c7S">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Xeb-MR-qex">
-                            <size key="itemSize" width="128" height="128"/>
+                            <size key="itemSize" width="150" height="150"/>
                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                         </collectionViewFlowLayout>
                         <cells>
-                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="Q1v-NA-qCp">
-                                <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="WeatherCell" id="Q1v-NA-qCp" customClass="WeatherCell" customModule="Weather2App" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="0.0" width="150" height="162"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="CAG-la-YxO">
-                                    <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="150" height="162"/>
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Sqw-Hq-u9f">
+                                            <rect key="frame" x="54" y="5" width="42" height="21"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="m7g-TL-ZcX">
+                                            <rect key="frame" x="54" y="136" width="42" height="21"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="sun.min.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="Zd7-Ky-hd0">
+                                            <rect key="frame" x="25" y="31.5" width="100" height="99"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="100" id="2Vh-dA-xEi"/>
+                                                <constraint firstAttribute="width" constant="100" id="UmL-Zz-BuS"/>
+                                            </constraints>
+                                        </imageView>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="Zd7-Ky-hd0" firstAttribute="centerX" secondItem="CAG-la-YxO" secondAttribute="centerX" id="0Qa-Nd-4W5"/>
+                                        <constraint firstItem="m7g-TL-ZcX" firstAttribute="centerX" secondItem="CAG-la-YxO" secondAttribute="centerX" id="2N4-qF-s3V"/>
+                                        <constraint firstAttribute="bottom" secondItem="m7g-TL-ZcX" secondAttribute="bottom" constant="5" id="2v8-R7-scY"/>
+                                        <constraint firstItem="m7g-TL-ZcX" firstAttribute="top" secondItem="Zd7-Ky-hd0" secondAttribute="bottom" constant="5" id="EJ3-3Y-W3O"/>
+                                        <constraint firstAttribute="width" secondItem="Zd7-Ky-hd0" secondAttribute="width" multiplier="1.5" id="YCQ-Ed-8Id"/>
+                                        <constraint firstItem="Sqw-Hq-u9f" firstAttribute="centerX" secondItem="CAG-la-YxO" secondAttribute="centerX" id="cAl-6z-HVe"/>
+                                        <constraint firstItem="Sqw-Hq-u9f" firstAttribute="top" secondItem="CAG-la-YxO" secondAttribute="top" constant="5" id="hCJ-hm-IZh"/>
+                                        <constraint firstItem="Zd7-Ky-hd0" firstAttribute="top" secondItem="Sqw-Hq-u9f" secondAttribute="bottom" constant="5" id="iyV-J6-sRD"/>
+                                    </constraints>
                                 </collectionViewCellContentView>
+                                <connections>
+                                    <outlet property="icon" destination="Zd7-Ky-hd0" id="OS5-E9-ZFX"/>
+                                    <outlet property="time" destination="m7g-TL-ZcX" id="zF5-rV-q2n"/>
+                                    <outlet property="weather" destination="Sqw-Hq-u9f" id="eCP-LZ-6JX"/>
+                                </connections>
                             </collectionViewCell>
                         </cells>
                         <connections>
@@ -208,7 +278,7 @@
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="S08-zd-mxT" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2386" y="66"/>
+            <point key="canvasLocation" x="2385.507246376812" y="65.625"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="R0A-Io-8gg">
@@ -230,6 +300,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="sun.min.fill" catalog="system" width="128" height="121"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
